Version 5.11
------------
Bug Fixes
* Fixed CWnd::Detach
* Removed possible deadlock in CWinApp::Trace
* Removed flicker when switching maximised MDI child windows.
* MDIChild windows now handle OnCreate and message reflection

Changes:
* Added the Performance sample. This program now also conducts a simple 
   performance test to measure the efficiency of the message handling. 
* Simplified updates to the statusbar. These are now done on a timer,
   instead of tracking mouse messages for the toolbar.
   
The following changes have been made to the Win32++ code:
Added CFrame::OnTimer
Added CFrame::GetMenuItemPos
Added CRebar::IsBandVisible
Added CRebar::ShowBand
Removed CFrame::ToolbarNotify

Version 5.1
-----------
New Features:
* Existing windows can be subclassed and converted to CWnd objects using Attach.
* Dialog items can be sublcassed and converted to CWnd objects, using AttachDlgItem.
* Improvements to CToolbar. The toolbar uses image lists which support using 
  separate bitmaps for normal, hot and disabled buttons. Text can be added
  to toolbar buttons, and the style can be set.
* Improvements to CStatusbar.  
* Notifications from common controls are reflected back to the CWnd object that
  generated them. 
* Messages from old style common controls are reflected back to the CWnd object
  that generated them.
  
Major Changes:
* Major updates to the CToolbar and CStatubar classes.
* Notification reflection.  WM_NOTIFY messages from child windows now call 
  OnNotifyReflect in the CWnd that generated them.
* Message reflection. Some controls send notifications to the parent window
  via specific messages such as WM_CTLCOLORSTATIC. These messages are reflected
  back to the CWnd object that generated them via OnMessageReflect.
* Existing windows (including dialog items) can now be attached to a CWnd.
  The window is automatically subclassed when attached to a CWnd.
* Integrated subclassing and superclassing into the framework. Superclassing and