@@ -66,7 +66,7 @@
 			OutputDirectory="Release"
 			IntermediateDirectory="Release"
 			ConfigurationType="1"
-			UseOfATL="0"
+			UseOfATL="1"
 			CharacterSet="2">
 			<Tool
 				Name="VCCLCompilerTool"
