@@ -8,18 +8,20 @@
 //  comsupp.lib (for ConvertStringToBSTR support)
 //  atl.lib		(assuming you want to link ATL staticly)
 //
-// For Visual Studio 2005
-//  It seems compiling with ALT staticly is not possible 
-//  (or at least more trouble than its worth) so you may need to also
-//  ship the ATL80.dll.   Sigh... 
+
 
 
 #include <exdisp.h>				// WebBrowser2 support
 #include <atlbase.h>			// ATL support
 #include <comutil.h>			// For ConvertStringToBSTR support
-
-
 #include "..\Win32++\Wincore.h"	
+
+//Required for static linking of ATL
+#include <atlhost.h>
+#ifdef _ATL_STATIC_REGISTRY
+  #include <statreg.h>
+#endif
+
 
 
 class CView : public CWnd
@@ -27,6 +29,14 @@ class CView : public CWnd
 public:
 	CView();
 	virtual ~CView();
+	
+	// ATL expects a module class to be used, especially when it is 
+	// linked as a static library. This satisfies that requirement.
+	struct CAtlDummyModule : ATL::CAtlModule
+	{
+		CAtlDummyModule() {memset(&m_libid, 1, sizeof(GUID));}
+		virtual HRESULT AddCommonRGSReplacements(IRegistrarBase*) { return S_OK; }
+	};
 
 protected:
 	virtual void OnCreate();
@@ -37,6 +47,7 @@ protected:
 
 private:
 	IWebBrowser2* m_pInetExplorer;
+	CAtlDummyModule m_MyModule;
 };
 
 #endif
